Changes to Squid-2.4.STABLE1 (Jan 12, 2001):

	- Various fixes for CYGWIN
	- Upgraded MSNT auth module to version 2.0.
	- Fixed potential problems with HTML by making sure all
	  HTML output is properly encoded.
	- Fixed a memory initialization problem with resource records in
	  lib/rfc1035.c.
	- Rewrote date parsing in lib/rfc1123.c and made it a little
	  more lenient.
	- Added Cache-control: max-stale support.
	- Fixed 'range_offset_limit' again.  The problem this time
	  is that client_side.c wouldn't set the we_dont_do_ranges
	  flag for normal cache misses.  It was only being set for
	  requests that might have been hits, but we decided to
	  change to a miss.
	- Added the Authenticate-Info and Proxy-Authenticate-Info
	  headers from RFC 2617.
	- HTTP header lines longer than 64K could cause an assertion.
	  Now they get ignored.
	- Fixed an IP address scanning bug that caused "123.foo.com"
	  to be interpreted as an IP address.
	- Converted many structure allocations to use mem pools.
	- Changed proxy authentication to strip leading whitespace
	  from usernames after decoding.
	- Prevented NULL pointer access in aclMatchAcl().  Some
	  ACL types require checklist->request_t, but it won't be
	  available in some cases (like snmp_access).  Warn the
	  admin that the ACL can't be checked and that we're denying
	  it.
	- Allow zero-size disk caches.
	- The actual filesystem blocksize is now used to account
	  for space overheads when calculating on-disk cache size.
	- Made the maximum memory cache object size configurable.
	- Added 'minimum_direct_rtt' configuration option.
	- Added 'ie_refresh' configuration option, which is a hack
	  to turn IMS requests into no-cache requests.
	- Added Linux netfilter support for intercepted connections.
	- Fixed a bug with clientAccessCheck() that allowed proxy
	  requests in accel mode.
	- Fixed a bug with 301/302 replies from redirectors.  Now
	  we force them to be cache misses.