@@ -1,5 +1,9 @@
 Changes to Squid-2.4.STABLE1 (Jan 12, 2001):
 
+	- cache_dir syntax changed to use options instead of many
+	  arguments. This means that the max_objsize argument now
+	  is an optional option, and that the syntax for how to
+	  specify the diskd magics is slightly differen.
 	- Various fixes for CYGWIN
 	- Upgraded MSNT auth module to version 2.0.
 	- Fixed potential problems with HTML by making sure all
